samples/_failures_safe/1761006022_643bfc_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_092693eb.c: In function ‘tokenize’:
./samples/SAFE/__tmp_092693eb.c:172:5: error: expected expression at end of input
  172 |     return
      |     ^~~~~~
./samples/SAFE/__tmp_092693eb.c:172:5: error: expected declaration or statement at end of input
